re PR c++/54913 (qualified lookup in ctor of class template fails to find static member of reference type)

PR c++/54913
	* semantics.c (finish_qualified_id_expr): convert_from_reference
	after building a SCOPE_REF.

From-SVN: r194266